# abnet

./: CMakeLists.txt  README.md
include/abnet/: abnet.hpp  config.hpp  error.hpp  error.ipp  error_code.hpp  error_code.ipp  local_free_on_block_exit.hpp  noncopyable.hpp  old_win_sdk_compat.hpp  pop_options.hpp  push_options.hpp  socket_ops.hpp  socket_ops.ipp  socket_types.hpp  system_error.hpp  winsock_init.hpp  winsock_init.ipp
tests/: CMakeLists.txt  client_server.t.cpp  dnsreq.t.cpp  httpbasic.t.cpp  test_util.hpp
